--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=lmsapp
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/lmsapp
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=true
+# === PostgreSQL Database connection ===
+spring.datasource.url=jdbc:postgresql://dpg-cvtv00ngi27c73abgsrg-a.render.com:5432/lmsapp_lcgi
+spring.datasource.username=lmsapp_lcgi_user
+spring.datasource.password=kdQM86fMTOhasc2GlfZaaPGWLGfCaYas
+spring.datasource.driver-class-name=org.postgresql.Driver
+# === Hibernate settings ===
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
