--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=lmsapp
 # === PostgreSQL Database connection ===
-spring.datasource.url=jdbc:postgresql://dpg-cvtv00ngi27c73abgsrg-a.render.com:5432/lmsapp_lcgi
+spring.datasource.url=jdbc:postgresql://dpg-cvtv00ngi27c73abgsrg-a.oregon-postgres.render.com:5432/lmsapp_lcgi
 spring.datasource.username=lmsapp_lcgi_user
 spring.datasource.password=kdQM86fMTOhasc2GlfZaaPGWLGfCaYas
 spring.datasource.driver-class-name=org.postgresql.Driver
